--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "1.8.3",
     "axios": "0.27.2",
     "react": "18.0.0",
     "react-bootstrap": "2.4.0",
     "react-dom": "18.0.0",
+    "react-redux": "8.0.2",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
